# shelly_mqtt_powerlogger

./: .env.example  Cargo.toml  README.md
migrations/: 20220804171000_create_powerlogging_table.sql
src/: main.rs
