[package]
name = "shelly_mqtt_powerlogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.1"
rumqttc = "0.13.0"
anyhow = "1.0.58"
chrono = "0.4.20"

[dependencies.sqlx]
version = "0.6.0"
features = ["postgres", "runtime-tokio-rustls"]

[dependencies.tokio]
version = "1"
features = ["full"]
